fix fonts not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@
 }
 
 :root > * {
-    font-family: "Gilroy", system-ui, sans-serif !important;
+    font-family: "Gilroy", 'Lexend', system-ui, sans-serif !important;
 }
 
 
